--- a/web_api/Dockerfile
+++ b/web_api/Dockerfile
@@ -9,4 +9,4 @@ EXPOSE 8080
 RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
 
-ENTRYPOINT ["python", "app.py"]
+CMD python bootstrap.py --config_section DEFAULT
