--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,6 +14,8 @@ services:
       - mongodb
     networks:
       - default
+    volumes:
+      - ./:/var/log/reddit_parser
   web_api:
     build: web_api/
     depends_on:
@@ -25,6 +27,8 @@ services:
       - mongodb
     networks:
       - default
+    volumes:
+      - ./:/var/log/web_api
 networks:
   default:
     driver: bridge
